# MalaMatematika

./: .gitignore  CMakeLists.txt  README.md
include/: ai.h  aithread.h  dna.h  exception.h  exceptionzagrada.h  matematika.h  wigra.h
include/algorithm/: ai.h  tree.h
include/core/: exceptionzagrada.h  random.h
include/ui/: mainwindow.h  wigra.h
res/ui/: game.ui  igra.ui
src/: ai.cpp  aithread.cpp  dna.cpp  exception.cpp  exceptionzagrada.cpp  main.cpp  mainwindow.cpp  matematika.cpp  random.cpp  wigra.cpp
src/algorithm/: ai.cpp  tree.cpp
src/core/: exception.cpp  exceptionzagrada.cpp  random.cpp
src/ui/: mainwindow.cpp  wigra.cpp
